--- a/styling.css
+++ b/styling.css
@@ -9,14 +9,7 @@ html,body{
     width: 100%;
     height: 100%;
 }
-#cursor{
-    height: 40px;
-    width: 40px;
-    background-color: #95C11E;
-    border-radius: 50%;
-    position: fixed;
-    z-index: 99;
-}
+
 #cursorblur{
     height: 300px;
     width: 300px;
@@ -71,6 +64,7 @@ video{
     font-size: 80px;
     font-weight: 800;
     position: relative;
+    z-index: 10;
 }
 #page1 h1::before{
     content: "EAT,DRINK,PLAY";
@@ -85,7 +79,7 @@ video{
     font-size: 40px;
     font-weight: 300;
     margin-top: 10px;
-    margin-bottom: 20px;    
+    margin-bottom: 20px;   
 }
 
 #page1 p{
@@ -98,7 +92,48 @@ video{
     width: 100%;
     z-index: 10;
 }
-
-
+#scroller::-webkit-scrollbar{
+    display: none;
+}
+#scroller{
+    /*background-color: red;*/ 
+    white-space: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: relative;
+    z-index: 10;
+}
+#scroller1{
+    display: inline-block;
+    white-space: nowrap;
+    animation-name: scroll;
+    animation-duration: 10s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+#scroller h4{
+    display: inline-block;
+    font-size: 120px;
+    font-weight: 900;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-right: 15px;
+    transition: all linear 0.2s;
+    color: transparent;
+    -webkit-text-stroke: 2px rgb(111, 211, 195);
+}
+#scroller h4:hover{
+    color: #95c11e;
+}
+#page1 h1:hover{
+    font-size: 100px;
+}
+@keyframes scroll {
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(-100%);
+    }
+}
 
 
