--- a/styling.css
+++ b/styling.css
@@ -10,14 +10,35 @@ html,body{
     height: 100%;
 }
 
-#cursorblur{
+/*#cursorblur{
     height: 300px;
     width: 300px;
     background-color: #96c11e65;
     border-radius: 50%;
     position: fixed;
     filter: blur(50px);
-    z-index: 9;
+    z-index: 1;
+}*/
+#sidebar{
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 30%;
+    z-index: 999;
+    background-color: rgba(255, 255, 255, 0.218);
+    backdrop-filter: blur(10px);
+    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+#sidebar li{
+    /* width: 100%;*/
+}
+#sidebar a{
+    /*width: 100%;*/
 }
 #nav{
     height: 150px;
@@ -30,6 +51,32 @@ html,body{
     gap: 45px;
     justify-content: flex-start;
     z-index: 99;
+}
+#nav ul{
+    width: 100%;
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+#nav li{
+    height: 50px;
+}
+#nav a{
+    height: 100%;
+    padding: 0 30px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    color: rgb(35, 240, 192);
+}
+#nav a:hover{
+    background-color: rgb(13, 8, 9);
+    border-radius: 15%;
+    box-shadow: 0 10px 10px #3a3938a1;
+}
+#nav li:first-child{
+    margin-right: auto;
 }
 #nav img{
     height: 75px;
@@ -117,7 +164,7 @@ video{
     font-weight: 900;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-right: 15px;
-    transition: all linear 0.2s;
+    transition: all linear 0.4s;
     color: transparent;
     -webkit-text-stroke: 2px rgb(111, 211, 195);
 }
@@ -134,6 +181,34 @@ video{
     to{
         transform: translateX(-100%);
     }
+}
+#about-us{
+    height: 40vh;
+    width: 100%;
+    /*background-color: #15131394;*/
+    align-items: center;
+    padding: 10px 5px;
+    display: flex;
+    justify-content: space-between;
+}
+#a{
+    height: 100%;
+    width: 30%;
+    border-radius: 5%;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.523);
+}
+#lastbox{
+    display: inline-block;
+    padding: 20vh 4px 0 0;
+}
+#b{
+    height: 5%;
+    width: 2.5%;
+}
+#lastbox img{
+    height: 5%;
+    width: 2.5%;
+    z-index: 10;
 }
 
 
